# acsii

./: .bumpversion.cfg  .gitignore  README.md  output.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
acsii/: __init__.py  cli.py
acsii/constants/: information.py  patterns.py
acsii/utils/: serializer.py  vision.py
tests/: __init__.py  test_acsii.py
utils/: vision.py
