[metadata]
author = Sadra Yahyapour
author_email = lnxpylnxpy@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = ACSII (not ASCII) is an image processing project that is capable of turning real images into ASCII arts.
license = MIT license
long_description = file: README.md
keywords = acsii
name = acsii
url = https://github.com/lnxpy/acsii
version = 0.1.0

[options]
python_requires = >=3.6
install_requires = opencv-python<=4.7.0
include_package_data = True
packages = find:
tests_require =
   
zip_safe = False

[options.packages.find]
include =
    acsii
    acsii.*

[options.entry_points]
console_scripts =
    acsii=acsii.cli:main

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:acsii/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
